# linkshot

./: Cargo.toml  LICENSE  README.md
assets/: linkshot.desktop
docs/: REVERSE_ENGINEERING.md  ROADMAP.md
src/: capture.rs  config.rs  editor.rs  imgur.rs  main.rs
