[package]
name = "linkshot"
version = "0.1.0"
edition = "2021"
description = "Unofficial Lightshot-style screenshot + annotate + upload tool for Linux/macOS"
license = "MIT"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui-phosphor = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tiny-skia = "0.11"
arboard = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "5"

[profile.release]
opt-level = 2
strip = true
